// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reply renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  delayLongPress={600}
  disabled={true}
  extraButtonProps={
    Object {
      "rippleColor": "transparent",
    }
  }
  onLongPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 10,
          "margin": 10,
          "marginBottom": 20,
          "paddingHorizontal": 20,
          "paddingTop": 10,
        },
        Object {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "paddingTop": 10,
        }
      }
    >
      <RichTextDisplay
        item={
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/profile-pic-annon.png",
              },
              "id": "1235we",
              "name": "May",
            },
            "comment": Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/profile-pic-annon.png",
                },
                "id": "1235we",
                "name": "May",
              },
              "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "discussionLevel": 0,
              "edited": false,
              "id": "21097",
              "isAuthorCurrentUser": false,
              "post": Object {
                "author": Object {
                  "avatarPath": Object {
                    "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                  },
                  "id": "1235we",
                  "name": "Empodere Duas Mulheres",
                  "posts": Array [],
                },
                "comments": Array [],
                "content": null,
                "id": "10387-314fs-12asdbj",
                "imagePath": Object {
                  "testUri": "../../../app/assets/images/image_post_1.jpg",
                },
                "publishedAt": 2000-01-01T00:00:00.000Z,
              },
              "publishedAt": 2019-01-01T00:00:00.000Z,
              "replies": Array [],
              "totalReplies": 0,
            },
            "content": "Nao.",
            "edited": false,
            "id": "21097",
            "isAuthorCurrentUser": false,
            "link": null,
            "publishedAt": 2019-01-01T00:00:00.000Z,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(4, 71, 47, 0.75)",
            "borderColor": "rgb(255, 255, 255)",
            "borderRadius": 30,
            "borderWidth": 5,
            "height": 60,
            "overflow": "hidden",
            "top": 15,
            "width": 60,
          }
        }
      >
        <Avatar
          avatarPath={
            Object {
              "testUri": "../../../app/assets/images/profile-pic-annon.png",
            }
          }
          size="large"
          userId="1235we"
        />
      </View>
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgb(51, 51, 51)",
              "fontStyle": "italic",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "rgb(45, 82, 113)",
                "fontWeight": "bold",
              }
            }
          >
            May 
          </Text>
          há um ano
        </Text>
      </View>
    </View>
  </View>
  <ActionSheetReply
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/profile-pic-annon.png",
          },
          "id": "1235we",
          "name": "May",
        },
        "comment": Object {
          "author": Object {
            "avatarPath": Object {
              "testUri": "../../../app/assets/images/profile-pic-annon.png",
            },
            "id": "1235we",
            "name": "May",
          },
          "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
          "discussionLevel": 0,
          "edited": false,
          "id": "21097",
          "isAuthorCurrentUser": false,
          "post": Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
              "posts": Array [],
            },
            "comments": Array [],
            "content": null,
            "id": "10387-314fs-12asdbj",
            "imagePath": Object {
              "testUri": "../../../app/assets/images/image_post_1.jpg",
            },
            "publishedAt": 2000-01-01T00:00:00.000Z,
          },
          "publishedAt": 2019-01-01T00:00:00.000Z,
          "replies": Array [],
          "totalReplies": 0,
        },
        "content": "Nao.",
        "edited": false,
        "id": "21097",
        "isAuthorCurrentUser": false,
        "link": null,
        "publishedAt": 2019-01-01T00:00:00.000Z,
      }
    }
    refProp={[Function]}
  />
</TouchableOpacity>
`;

exports[`Reply renders correctly when edited 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  delayLongPress={600}
  disabled={true}
  extraButtonProps={
    Object {
      "rippleColor": "transparent",
    }
  }
  onLongPress={[Function]}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "rgb(255, 255, 255)",
          "borderRadius": 10,
          "margin": 10,
          "marginBottom": 20,
          "paddingHorizontal": 20,
          "paddingTop": 10,
        },
        Object {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "paddingTop": 10,
        }
      }
    >
      <RichTextDisplay
        item={
          Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/profile-pic-annon.png",
              },
              "id": "1235we",
              "name": "May",
            },
            "comment": Object {
              "author": Object {
                "avatarPath": Object {
                  "testUri": "../../../app/assets/images/profile-pic-annon.png",
                },
                "id": "1235we",
                "name": "May",
              },
              "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
              "discussionLevel": 0,
              "edited": false,
              "id": "21097",
              "isAuthorCurrentUser": false,
              "post": Object {
                "author": Object {
                  "avatarPath": Object {
                    "testUri": "../../../app/assets/images/empower_two_women_logo.png",
                  },
                  "id": "1235we",
                  "name": "Empodere Duas Mulheres",
                  "posts": Array [],
                },
                "comments": Array [],
                "content": null,
                "id": "10387-314fs-12asdbj",
                "imagePath": Object {
                  "testUri": "../../../app/assets/images/image_post_1.jpg",
                },
                "publishedAt": 2000-01-01T00:00:00.000Z,
              },
              "publishedAt": 2019-01-01T00:00:00.000Z,
              "replies": Array [],
              "totalReplies": 0,
            },
            "content": "Nao.",
            "edited": true,
            "id": "21097",
            "isAuthorCurrentUser": false,
            "link": null,
            "publishedAt": 2019-01-01T00:00:00.000Z,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(4, 71, 47, 0.75)",
            "borderColor": "rgb(255, 255, 255)",
            "borderRadius": 30,
            "borderWidth": 5,
            "height": 60,
            "overflow": "hidden",
            "top": 15,
            "width": 60,
          }
        }
      >
        <Avatar
          avatarPath={
            Object {
              "testUri": "../../../app/assets/images/profile-pic-annon.png",
            }
          }
          size="large"
          userId="1235we"
        />
      </View>
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgb(51, 51, 51)",
              "fontStyle": "italic",
              "marginBottom": 10,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "rgb(45, 82, 113)",
                "fontWeight": "bold",
              }
            }
          >
            May 
          </Text>
          há um ano
           (Editada)
        </Text>
      </View>
    </View>
  </View>
  <ActionSheetReply
    item={
      Object {
        "author": Object {
          "avatarPath": Object {
            "testUri": "../../../app/assets/images/profile-pic-annon.png",
          },
          "id": "1235we",
          "name": "May",
        },
        "comment": Object {
          "author": Object {
            "avatarPath": Object {
              "testUri": "../../../app/assets/images/profile-pic-annon.png",
            },
            "id": "1235we",
            "name": "May",
          },
          "content": "Dá certo sim, o meu pai, por exemplo, fugiu quando eu tinha 5 anos e eu não faço ideia da onde ele esteja. Nunca mais voltou, pena que a violência só piorou.",
          "discussionLevel": 0,
          "edited": false,
          "id": "21097",
          "isAuthorCurrentUser": false,
          "post": Object {
            "author": Object {
              "avatarPath": Object {
                "testUri": "../../../app/assets/images/empower_two_women_logo.png",
              },
              "id": "1235we",
              "name": "Empodere Duas Mulheres",
              "posts": Array [],
            },
            "comments": Array [],
            "content": null,
            "id": "10387-314fs-12asdbj",
            "imagePath": Object {
              "testUri": "../../../app/assets/images/image_post_1.jpg",
            },
            "publishedAt": 2000-01-01T00:00:00.000Z,
          },
          "publishedAt": 2019-01-01T00:00:00.000Z,
          "replies": Array [],
          "totalReplies": 0,
        },
        "content": "Nao.",
        "edited": true,
        "id": "21097",
        "isAuthorCurrentUser": false,
        "link": null,
        "publishedAt": 2019-01-01T00:00:00.000Z,
      }
    }
    refProp={[Function]}
  />
</TouchableOpacity>
`;
